--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -4,9 +4,9 @@ on:
   push:
     tags:
       - '*'
-  # pull_request:
-  #   branches:
-  #     - master
+#  pull_request:
+#    branches:
+#      - master
 
 jobs:
   create-release:
@@ -68,6 +68,7 @@ jobs:
             pypi.org:443
             files.pythonhosted.org:443
             ghcr.io:443
+            pkg-containers.githubusercontent.com:443
 
       - uses: actions/checkout@61b9e3751b92087fd0b06925ba6dd6314e06f089
       - uses: actions/setup-python@d27e3f3d7c64b4bbf8e4abfb9b63b83e846e0435
@@ -88,13 +89,6 @@ jobs:
         with:
           name: wheels
           path: dist
-
-      - name: Upload release binaries
-        uses: alexellis/upload-assets@259de5111cb56966d046ced998941e93f91d2c93
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          asset_paths: '["./dist/tantivy-*"]'
 
   windows:
     runs-on: windows-latest
@@ -126,13 +120,6 @@ jobs:
         with:
           name: wheels
           path: dist
-
-      - name: Upload release binaries
-        uses: alexellis/upload-assets@259de5111cb56966d046ced998941e93f91d2c93
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          asset_paths: '["./dist/tantivy-*"]'
 
   macos:
     runs-on: macos-latest
@@ -173,13 +160,6 @@ jobs:
         with:
           name: wheels
           path: dist
-
-      - name: Upload release binaries
-        uses: alexellis/upload-assets@259de5111cb56966d046ced998941e93f91d2c93
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          asset_paths: '["./dist/tantivy-*"]'
 
   # release-pypy:
   #   name: Release
