--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,51 +1,15 @@
 name: Test & Release
 
 on:
-  push:
-    tags:
-      - '*'
-#  pull_request:
-#    branches:
-#      - master
+  release:
+    types: [published]
+  # pull_request:
+  #   branches:
+  #     - master
 
 jobs:
-  create-release:
-    permissions:
-      contents: write  # for actions/create-release to create a release
-    name: create-release
-    runs-on: ubuntu-latest
-    outputs:
-      upload_url: ${{ steps.release.outputs.upload_url }}
-      release_version: ${{ env.RELEASE_VERSION }}
-    steps:
-      - name: Harden Runner
-        uses: step-security/harden-runner@c8454efe5d0bdefd25384362fe217428ca277d57 # v1
-        with:
-          disable-sudo: true
-          egress-policy: block
-          allowed-endpoints: >
-            api.github.com:443
-
-      - name: Get the release version from the tag
-        shell: bash
-        if: env.RELEASE_VERSION == ''
-        run: |
-          # See: https://github.community/t5/GitHub-Actions/How-to-get-just-the-tag-name/m-p/32167/highlight/true#M1027
-          echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
-          echo "version is: ${{ env.RELEASE_VERSION }}"
-
-      - name: Create GitHub release
-        id: release
-        uses: actions/create-release@0cb9c9b65d5d1901c1f53e5e66eaf4afd303e70e # v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ env.RELEASE_VERSION }}
-          release_name: ${{ env.RELEASE_VERSION }}
-
   linux:
     runs-on: ubuntu-latest
-    needs: create-release
     strategy:
       matrix:
         platform: [ 'x86_64-unknown-linux-gnu', 'aarch64-unknown-linux-gnu' ]
@@ -92,7 +56,6 @@ jobs:
 
   windows:
     runs-on: windows-latest
-    needs: create-release
     strategy:
       matrix:
         target: [x64]
@@ -123,7 +86,6 @@ jobs:
 
   macos:
     runs-on: macos-latest
-    needs: create-release
     strategy:
       matrix:
         python-version: ['3.8', '3.9', '3.10', '3.11']
@@ -160,6 +122,43 @@ jobs:
         with:
           name: wheels
           path: dist
+
+  python-release-github:
+    runs-on: ubuntu-latest
+    needs: [ macos, windows, linux ]
+    permissions:
+      contents: write # To add assets to a release.
+    steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@18bf8ad2ca49c14cbb28b91346d626ccfb00c518 # v2.1.0
+        with:
+          egress-policy: audit # TODO: change to 'egress-policy: block' after couple of runs
+
+      - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
+        with:
+          ref: ${{ github.head_ref }}
+
+      - uses: actions-rs/toolchain@16499b5e05bf2e26879000db0c1d13f7e13fa3af # v1.0.7
+        with:
+          profile: minimal
+          toolchain: stable
+
+      - name: Set up Python 3.8
+        uses: actions/setup-python@d27e3f3d7c64b4bbf8e4abfb9b63b83e846e0435 # v4.5.0
+        with:
+          python-version: 3.8
+
+      - uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a # v3.0.2
+        with:
+          name: wheels
+          path: wheels
+
+      - name: Upload release binaries
+        uses: alexellis/upload-assets@259de5111cb56966d046ced998941e93f91d2c93
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          asset_paths: '["./wheels/tantivy-*"]'
 
   # release-pypy:
   #   name: Release
