--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -192,6 +192,7 @@ jobs:
           args: --repository-url=https://test.pypi.org/legacy/ --skip-existing *
 
       - name: Publish to PyPI
+        if: always()
         uses: messense/maturin-action@49e11751aa9751fc4db9c247b8910702ee225df9
         env:
           MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
