--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -172,6 +172,8 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     needs: [ macos, windows, linux ]
+    permissions:
+      id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@74b568e8591fbb3115c70f3436a0c6b0909a8504
@@ -183,19 +185,16 @@ jobs:
           name: wheels
           path: wheels
 
-      - name: Publish to PyPI Tests
-        uses: messense/maturin-action@20111a7c286a91434bdd7f612314a38ff6c091ad
-        env:
-          MATURIN_PYPI_TOKEN: ${{ secrets.TEST_PYPI_API_TOKEN }}
+      - name: Publish package distributions to Test PyPI
+        uses: pypa/gh-action-pypi-publish@0bf742be3ebe032c25dd15117957dc15d0cfc38d # v1.8.5
         with:
-          command: upload
-          args: --repository-url=https://test.pypi.org/legacy/ --skip-existing *
+          repository-url: https://test.pypi.org/legacy/
+          packages-dir: wheels/
+          skip-existing: true
 
-      - name: Publish to PyPI
+      - name: Publish package distributions to PyPI
         if: always()
-        uses: messense/maturin-action@49e11751aa9751fc4db9c247b8910702ee225df9
-        env:
-          MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+        uses: pypa/gh-action-pypi-publish@0bf742be3ebe032c25dd15117957dc15d0cfc38d # v1.8.5
         with:
-          command: upload
-          args: --skip-existing *
+          packages-dir: wheels/
+          skip-existing: true
