--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,4 @@ serde_json = "1.0.91"
 
 [dependencies.pyo3]
 version = "0.18.0"
-features = ["chrono", "extension-module"]
+features = ["chrono", "extension-module", "multiple-pymethods"]
