--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,6 @@ tantivy.so
 tantivy.dylib
 tantivy/tantivy.cpython*.so
 tantivy.egg-info/
-
-# Exclude the mkdocs site directory
+.venv
+.envrc
 site/
