--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ futures = "0.3.26"
 pythonize = "0.19.0"
 serde = "1.0"
 serde_json = "1.0.91"
+jieba-rs = "0.6.8"
 
 [dependencies.pyo3]
 version = "0.19.1"
