--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,10 @@ jobs:
           components: rustfmt
 
       - name: Check Formatting
-        run: cargo fmt --check
+        uses: actions-rs/cargo@844f36862e911db73fe0815f00a4a2602c279505 # v1.0.3
+        with:
+          command: fmt
+          args: --check
 
   Test:
     strategy:
@@ -48,8 +51,6 @@ jobs:
             python-version: "3.10"
           - os: ubuntu-latest
             python-version: 3.8
-          - os: ubuntu-latest
-            python-version: 3.7
     runs-on: "${{ matrix.os }}"
     steps:
       - name: Harden Runner
@@ -68,7 +69,7 @@ jobs:
             static.rust-lang.org:443
 
       - uses: actions/checkout@61b9e3751b92087fd0b06925ba6dd6314e06f089
-      - uses: actions/setup-python@61a6322f88396a6271a6ee3565807d608ecaddd1  # 4.7.0
+      - uses: actions/setup-python@65d7f2d534ac1bc67fcd62888c5f4f3d2cb2b236  # 4.7.1
         with:
           python-version: ${{ matrix.python-version }}
 
@@ -76,6 +77,6 @@ jobs:
         with:
           toolchain: stable
 
-      - uses: Swatinem/rust-cache@e207df5d269b42b69c8bc5101da26f7d31feddb4  # 2.6.2
+      - uses: Swatinem/rust-cache@a95ba195448af2da9b00fb742d14ffaaf3c21f43  # 2.7.0
       - run: python3 -m pip install nox
       - run: nox -s test-${{ matrix.python-version }}
