--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tantivy"
-version = "0.20.1"
+version = "0.21.0"
 readme = "README.md"
 authors = ["Damir Jelić <poljar@termina.org.uk>"]
 edition = "2018"
@@ -14,8 +14,9 @@ crate-type = ["cdylib"]
 pyo3-build-config = "0.19.1"
 
 [dependencies]
+base64 = "0.21"
 chrono = "0.4.23"
-tantivy = "0.20.1"
+tantivy = "0.21.0"
 itertools = "0.10.5"
 futures = "0.3.26"
 pythonize = "0.19.0"
