--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -36,6 +36,7 @@ jobs:
             files.pythonhosted.org:443
             ghcr.io:443
             pkg-containers.githubusercontent.com:443
+            cdn02.quay.io:443
 
       - uses: actions/checkout@61b9e3751b92087fd0b06925ba6dd6314e06f089
       - uses: actions/setup-python@65d7f2d534ac1bc67fcd62888c5f4f3d2cb2b236
@@ -43,13 +44,13 @@ jobs:
           python-version: 3.8
           architecture: x64
 
-      - uses: messense/maturin-action@683eb33e2cda131da55757dbac7628b2ef22df2f
+      - uses: PyO3/maturin-action@683eb33e2cda131da55757dbac7628b2ef22df2f
         with:
           rust-toolchain: stable
           manylinux: auto
           target: ${{ matrix.platform }}
           command: build
-          args: --release --sdist -o dist -i 3.8 3.9 3.10 3.11
+          args: --release --sdist -o dist -i 3.8 3.9 3.10 3.11 3.12
 
       - name: Upload wheels
         uses: actions/upload-artifact@a8a3f3ad30e3422c9c7b888a15615d19a852ae32  # 3.1.3
@@ -74,7 +75,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - uses: messense/maturin-action@683eb33e2cda131da55757dbac7628b2ef22df2f
+      - uses: PyO3/maturin-action@683eb33e2cda131da55757dbac7628b2ef22df2f
         env:
           PYO3_PYTHON: python${{ matrix.python-version }}
         with:
@@ -104,7 +105,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Build wheels - x86_64
-        uses: messense/maturin-action@683eb33e2cda131da55757dbac7628b2ef22df2f
+        uses: PyO3/maturin-action@683eb33e2cda131da55757dbac7628b2ef22df2f
         env:
           PYO3_PYTHON: python${{ matrix.python-version }}
         with:
@@ -113,12 +114,13 @@ jobs:
           args: --release -o dist
 
       - name: Build wheels - universal2
-        uses: messense/maturin-action@683eb33e2cda131da55757dbac7628b2ef22df2f
+        uses: PyO3/maturin-action@683eb33e2cda131da55757dbac7628b2ef22df2f
         env:
           PYO3_PYTHON: python${{ matrix.python-version }}
         with:
+          target: universal2
           command: build
-          args: --release -o dist --universal2
+          args: --release -o dist
 
       - name: Upload wheels
         uses: actions/upload-artifact@a8a3f3ad30e3422c9c7b888a15615d19a852ae32  # 3.1.3
